Protect profile activation from stale enabled mods state